<resources>
    <string name="app_name">FSConnectParent</string>
    <string name="title_message">消息</string>
    <string name="title_contact">联系人</string>
    <string name="title_explore">发现</string>
    <string name="title_account">我的</string>
    <string name="copy_success">复制成功</string>
    <string name="cancel">取消</string>
    <string name="logout_success_hint">注销成功</string>
    <string name="login_text">欢迎登录</string>
    <string name="login_input_username_hint">手机号</string>
    <string name="login_input_password_hint">密码</string>
    <string name="login_register_hint">注册</string>
    <string name="login_submit">登录</string>
    <string name="confirm_pwd_hint">确认新密码</string>
    <string name="register_pwd_hint">请输入至少六位数密码</string>
    <string name="hint_username_ok">请输入正确的手机号码</string>
    <string name="retrieve_pwd_label">忘记密码？</string>
    <string name="reset_pwd_submit">保存</string>
    <string name="request_error_hint">网络请求失败,请重试&#8230;</string>
    <string name="login_success_hint">登录成功</string>
    <string name="reset_success_hint">密码修改成功</string>
    <string name="message_pwd_error">密码错误</string>
    <string name="message_username_error">用户名不存在</string>
    <string name="message_username_null">用户名未填写！！！</string>
    <string name="progress_submit">正在提交…</string>
    <string name="footer_type_net_error">网络错误</string>
    <string name="state_network_error">网络错误</string>
    <string name="state_loading">正在加载…</string>
    <string name="state_not_more">没有更多数据</string>
    <string name="state_load_error">加载失败</string>
    <string name="state_refreshing">正在刷新</string>
    <string name="notice_add">添加通知</string>
    <string name="notice_title">通知主題</string>
    <string name="notice_content">通知內容</string>
    <string name="action_select">选择操作</string>
    <string name="summary_image">[图片]</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="summary_file">[文件]</string>
    <string name="summary_friend_add">请求添加好友</string>
    <string name="summary_friend_added">我已添加</string>
    <string name="summary_friend_add_me">请求添加</string>
    <string name="summary_friend_recommend">推荐添加</string>
    <string name="summary_me">我</string>
    <string name="summary_group_apply">申请加群</string>
    <string name="summary_group_invite">邀请</string>
    <string name="summary_group_add">加入群</string>
    <string name="summary_invite_person">邀请人</string>
    <string name="summary_group_admin_change">管理员变更</string>
    <string name="summary_group_info_change">群资料变更</string>
    <string name="summary_group_mem_add">加入群</string>
    <string name="summary_group_mem_quit">退出群</string>
    <string name="summary_group_mem_kick">被踢出群</string>
    <string name="summary_group_mem_modify">资料变更</string>
    <string name="confirm">确定</string>
        <string name="agree">同意</string>
        <string name="agreed">已同意</string>
    <string name="default_group_name">默认分组</string>
        <string name="change_group_error">修改分组失败</string>
        <string name="people">人</string>
        <string name="login_error">登录失败，请稍后重试</string>
        <string name="login_error_timeout">登录失败，当前无网络</string>
        <string name="login_succ">登录成功</string>
        <string name="kick_logout">你的账号已在其他终端登录,重新登录</string>
        <string name="operate_fail">操作失败</string>
    <string name="save_succ">保存成功</string>
        <string name="download_fail">下载失败</string>
        <string name="downloading">正在下载，请稍候</string>
        <string name="save_fail">保存失败</string>
        <string name="tls_expire">账号登录已过期，请重新登录</string>
    <string name="file_not_found">未找到文件，请稍后重试</string>
        <string name="send_success">发送成功</string>
    <string name="confirm_password_error">两次密码不相同</string>
    <string name="truename_error">请输入真实姓名</string>
    <string name="register_success_hint">注册成功</string>
    <string name="conversation_system_friend">新朋友</string>
        <string name="conversation_system_group">群组消息</string>
        <string name="conversation_del">删除会话</string>
        <string name="conversation_draft">[草稿]</string>
    <string name="public_group">公开群</string>
        <string name="discuss_group">讨论组</string>
        <string name="chatroom">聊天室</string>
    <string name="setting_logout_fail">退出登录失败，请稍后重试</string>
    <string name="search_cancel">取消</string>
        <string name="search_hint">搜索手机号</string>
        <string name="search_no_result">很抱歉，没有找到符合内容</string>
        <string name="title_addfri">添加好友</string>
    <string name="add_detail_name">备注名</string>
        <string name="add_detail_group">分组</string>
        <string name="add_detail_message">附加消息</string>
        <string name="add_friend_send">发送添加好友请求</string>
        <string name="add_friend_succeed">请求已发送</string>
        <string name="add_friend_added">已添加好友</string>
        <string name="add_friend_refuse_all">对方拒绝添加任何人为好友</string>
        <string name="add_friend_to_blacklist">我在对方的黑名单中</string>
        <string name="add_friend_error">添加好友失败，请稍后重试</string>
        <string name="add_friend_del_black_list">添加失败，该用户在你的黑名单中，是否将该用户从黑名单中移除（你需要在移除成功后重发添加好友请求）</string>
        <string name="add_friend_del_black_err">移出黑名单失败</string>
        <string name="add_friend_del_black_succ">移出黑名单成功</string>
        <string name="title_manager_group">分组管理</string>
        <string name="add_new_group">添加分组</string>
        <string name="add_dialog_title">添加分组</string>
        <string name="add_dialog_subtitle">请输入新分组的名称</string>
        <string name="add_dialog_null">分组名称不能为空</string>
    <string name="delete_dialog_subtitle">删除分组</string>
        <string name="delete_dialog_subtitle_sur">,该分组好友将移动到默认分组</string>
        <string name="delete_group_succ">删除分组成功</string>
        <string name="add_group_succ">添加分组成功</string>
        <string name="add_group_error_existed">添加失败，分组已存在</string>
        <string name="add_group_error_limit">添加失败，分组达到上限</string>
        <string name="add_group_error">添加分组失败</string>
        <string name="del_group_error">删除分组失败</string>
        <string name="chat_image">图片</string>
        <string name="chat_file">文件</string>
        <string name="chat_photo">拍摄</string>
        <string name="chat_video">小视频</string>
        <string name="chat_press_talk">按住 说话</string>
        <string name="chat_release_send">松开 结束</string>
        <string name="chat_up_finger">手指上滑，取消发送</string>
        <string name="chat_audio_too_short">录音过短，请重试</string>
        <string name="chat_video_too_short">录制过短，请重试</string>
        <string name="chat_resend">重新发送</string>
        <string name="chat_del">删除</string>
        <string name="chat_save">保存</string>
        <string name="chat_file_too_large">文件过大，发送失败</string>
        <string name="chat_file_not_exist">文件不存在，发送失败</string>
        <string name="chat_image_preview_title">图片预览</string>
        <string name="chat_image_preview_send">发送</string>
        <string name="chat_image_preview_load_err">图片加载失败</string>
        <string name="chat_image_preview_ori">原图发送</string>
        <string name="chat_typing">对方正在输入…</string>
        <string name="chat_content_bad">内容含有敏感词</string>
        <string name="profile_detail">详细资料</string>
        <string name="profile_back">返回</string>
        <string name="profile_id">账号</string>
        <string name="profile_remark">备注名</string>
        <string name="profile_black">加入黑名单</string>
        <string name="profile_remark_edit">修改备注</string>
        <string name="profile_chat">发送消息</string>
        <string name="profile_del">删除好友</string>
    <string name="profile_now_group">所在分组</string>
        <string name="profile_del_succeed">删除好友成功</string>
        <string name="profile_del_fail">删除好友失败</string>
        <string name="profile_black_succ">加入黑名单成功</string>
        <string name="chat_setting_title">聊天设置</string>
        <string name="chat_setting_group_member">群成员</string>
        <string name="chat_setting_group_id">群组ID</string>
        <string name="chat_setting_group_name">群名称</string>
        <string name="chat_setting_group_add_opt">加群方式</string>
        <string name="chat_setting_group_msg_alert">消息提醒</string>
        <string name="chat_setting_group_introduce">群介绍</string>
        <string name="chat_setting_group_all_accept">允许任何人加入</string>
        <string name="chat_setting_group_all_reject">禁止加入</string>
        <string name="chat_setting_group_auth">需群主审核</string>
        <string name="chat_setting_quit">退出群</string>
        <string name="chat_setting_dismiss">解散群</string>
        <string name="chat_setting_add">申请加群</string>
        <string name="chat_setting_dismiss_succ">解散群成功</string>
        <string name="chat_setting_quit_succ">退出群成功</string>
        <string name="chat_setting_quit_fail_private">讨论组不能解散</string>
        <string name="chat_setting_change_err">修改失败</string>
        <string name="chat_setting_change_group_name">修改群名称</string>
        <string name="chat_setting_change_group_intro">修改群介绍</string>
        <string name="chat_setting_no_rev">不接收消息</string>
        <string name="chat_setting_rev_notify">接收并提醒消息</string>
        <string name="chat_setting_rev_not_notify">接收不提醒消息</string>
        <string name="chat_setting_invite_error">邀请群成员失败</string>
    <string name="newfri_agree">同意</string>
    <string name="newfri_accept">已接受</string>
        <string name="newfri_wait">等待验证</string>
        <string name="time_yesterday">昨天</string>
        <string name="time_day">日</string>
        <string name="time_month">月</string>
        <string name="time_year">年</string>
        <string name="time_more">99+</string>
        <string name="title_create_group">创建群</string>
        <string name="subtitle_create_group_name">群名称</string>
        <string name="btn_add_member">添加群成员</string>
    <string name="create_group_fail">创建群失败</string>
        <string name="create_group_fail_because_wording">创建失败，群名含有敏感词</string>
        <string name="create_group_succeed">创建群成功</string>
        <string name="create_group_need_name">请输入群名称</string>
        <string name="search_group_hint">搜索ID或名称</string>
        <string name="edit_error">修改失败</string>
        <string name="choose_title">选择联系人</string>
        <string name="choose_need_one">至少选择一个联系人</string>
        <string name="group_member_profile">成员资料</string>
        <string name="group_member_quiet">设置禁言</string>
        <string name="group_member_manage">设为管理员</string>
        <string name="group_member_card">群名片</string>
        <string name="group_member_del">移出本群</string>
        <string name="group_member_del_err">移出群成员失败</string>
        <string name="group_member_del_succ">移出群成员成功</string>
        <string name="group_member_manage_set_err">设置管理员失败</string>
        <string name="group_member_manage_set_type_err">该类型群组不能设置管理员</string>
        <string name="group_member_manage_set_succ">设置管理员成功</string>
        <string name="group_member_quiet_ing">禁言中</string>
        <string name="group_member_quiet_ten_min">十分钟</string>
        <string name="group_member_quiet_one_hour">一小时</string>
        <string name="group_member_quiet_one_day">一天</string>
        <string name="group_member_quiet_cancel">取消禁言</string>
        <string name="group_member_quiet_err">设置禁言失败</string>
        <string name="group_member_change_card">修改群名片</string>
        <string name="group_member_already">已经是群成员</string>
        <string name="friendship_handle_title">申请详情</string>
        <string name="friendship_handle_ok">同意</string>
        <string name="friendship_handle_reject">拒绝</string>
        <string name="friendship_handle_word">附加信息</string>
</resources>