<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.jaron.fsconnectparent.ui.TemplateTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        app:backText="@string/profile_back"
        app:canBack="true"
        app:titleText="@string/profile_detail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/head_other" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_gray1"
            android:textSize="16sp" />
    </LinearLayout>
    <com.jaron.fsconnectparent.ui.LineControllerView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:name="@string/profile_id"/>
    <com.jaron.fsconnectparent.ui.LineControllerView
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:name="昵称"/>
    <com.jaron.fsconnectparent.ui.LineControllerView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:name="性别"/>
    <com.jaron.fsconnectparent.ui.LineControllerView
        android:id="@+id/remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:canNav="true"
        app:name="@string/profile_remark"/>
    <com.jaron.fsconnectparent.ui.LineControllerView
        android:id="@+id/blackList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isSwitch="true"
        app:name="@string/profile_black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btnDel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="@drawable/bg_negative_btn"
            android:textColor="@color/text_btn"
            android:textSize="18sp"
            android:gravity="center"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/profile_del"/>
        <TextView
            android:id="@+id/btnChat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_positive_btn"
            android:textColor="@color/text_btn"
            android:textSize="18sp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/profile_chat"/>
    </LinearLayout>




</LinearLayout>
